<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="app_home_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores">Scores App </string>
    <string name="library">Library App </string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="fav_button_on">Mark as Favourite</string>
    <string name="fav_button_off">Remove from Favourites</string>

    <string name="toast_prefix_text">This button will launch my </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_popular_movies">PopularMovies</string>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings : Sort order -->

    <string-array name="pref_sort_order_titles">
        <item>Most Popular</item>
        <item>Highest rated</item>
        <item>My Favourites</item>
    </string-array>

    <string-array name="pref_sort_order_values">
        <item>popular</item>
        <item>top_rated</item>
        <item>favorite</item>
    </string-array>

    <string name="pref_sort_order_title">Sort order</string>
    <string name="pref_sort_order_key">sortorder</string>
    <string name="pref_sort_order_default">popular</string>
    <string name="title_activity_dummy_">Dummy_Activity</string>


</resources>

